--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "start": "node --watch app.js"
+    "start": "node --watch server.js"
   },
   "keywords": [],
   "author": "",
@@ -12,11 +12,16 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "graphql": "^16.9.0",
+    "graphql-http": "^1.22.1",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.12.0",
+    "ruru": "^2.0.0-beta.13",
     "sequelize": "^6.37.3"
   },
   "devDependencies": {
