--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.9'
-
 services:
   app:
     build: .
@@ -22,3 +20,5 @@ services:
     restart: always
     environment:
       - POSTGRES_PASSWORD=postgres
+    volumes:
+      - /data:/var/lib/postgresql/data
