--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,9 @@ services:
       - JWT_SECRET=inirahasiakitabersama
     depends_on:
       - db
+    command: npx sequelize db:create && npx sequelize db:migrate && npm start
+    expose:
+      - 3000
 
   db:
     image: postgres:16
