--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - JWT_SECRET=inirahasiakitabersama
     depends_on:
       - db
-    command: npx sequelize db:migrate && npm start
+    command: npm start
     expose:
       - 3000
 
