--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "graphql": "^16.9.0",
     "graphql-http": "^1.22.1",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.12.0",
     "ruru": "^2.0.0-beta.13",
     "sequelize": "^6.37.3"
