--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "express-pdf": "^1.2.2",
     "graphql": "^16.9.0",
     "graphql-http": "^1.22.1",
     "jsonwebtoken": "^9.0.2",
