--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node --watch server.js"
+    "start": "node --watch server.js",
+    "build": "cd frontend && npm install && npm run build && cd .."
   },
   "keywords": [],
   "author": "",
