add migrate command

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node --watch server.js",
-    "build": "cd frontend && npm install && npm run build && cd .."
+    "build": "cd frontend && npm install && npm run build && cd ..",
+    "migrate": "npx sequelize db:migrate"
   },
   "keywords": [],
   "author": "",
